--- a/.gitignore
+++ b/.gitignore
@@ -4,40 +4,35 @@ __pycache__/
 *.py[cod]
 *.pyc
 
-# Next.js / React
-/.next/
-/node_modules/
-/.pnp/
-/.pnp.js
-/.cache/
-/.yarn/
-.yarnrc
-.yarnrc.yml
-.yarnrc.yaml
-.yarnrc.json
-.yarnrc.lock
-.yarn-integrity
-build/
-.DS_Store
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-Icon?
-ehthumbs.db
-Thumbs.db
+node_modules
+dist
+dist-ssr
+*.local
 
-# IDE specific files
-.idea/
-.vscode/
-*.sublime-project
-*.sublime-workspace
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
 
 # Environment variables
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.env
